[package]
name = "ecs-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.6"
aws-sdk-ecs = "1.46.0"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
aws-sdk-sts = "1.44.0"
nix = { version = "0.29.0", features = ["term", "process", "fs"] }
portable-pty = "0.8.1"
termios = "0.3"
inquire = "0.7.5"
ini = "1.3.0"
